見た目の実装

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,190 @@
-.App {
+html {
+  font-family: Lato, "Lucida Grande", "Lucida Sans Unicode", Tahoma, sans-serif;
+}
+.App .header {
+  background-color: rgb(51, 51, 51);;
+}
+
+.App .header .nav {
+  display: flex;
+  align-items: center;
+  padding: 18px 16px;
+}
+
+.App .header h1 {
+  font-size: 2rem;
+  font-weight: bold;
+  color: #fff;
+}
+
+.App .header .nav ul {
+  display: flex;
+  padding: 0 32px;
+}
+
+.App .header .nav ul li {
+  margin-right: 16px;
+}
+
+.App .header .nav ul a {
+  font-size: 1.1rem;
+  font-weight: bold;
+  color: #fff;
+  text-decoration: none;
+}
+
+.main {
+  padding: 32px 0;
+}
+
+.main .wrapper {
+  width: 864px;
+  margin: 0 auto;
+}
+
+.main .wrapper .tab {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  list-style-type: none;
+  margin-bottom: 54px;
+}
+
+.main .wrapper .tab li {
+  width: 431px;
+  text-align: center;
+  border-radius: 6px 6px 0px 0px;
+}
+
+.main .wrapper .tab .issue {
+  border-bottom: 1px solid rgb(225, 228, 232);
+}
+
+.main .wrapper .tab .issue.current {
+  border-top: 1px solid rgb(225, 228, 232);
+  border-right: 1px solid rgb(225, 228, 232);
+  border-left: 1px solid rgb(225, 228, 232);
+  border-bottom: none;
+}
+
+.main .wrapper .tab .pr {
+  border-bottom: 1px solid rgb(225, 228, 232);
+}
+
+.main .wrapper .tab .pr.current {
+  border-top: 1px solid rgb(225, 228, 232);
+  border-right: 1px solid rgb(225, 228, 232);
+  border-left: 1px solid rgb(225, 228, 232);
+  border-bottom: none;
+}
+
+.main .wrapper .tab li a {
+  color: rgb(88, 96, 105);
+  text-decoration: none;
+  padding: 19px 0;
+  display: block;
+}
+
+.main .wrapper .search_box {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 16px;
+  margin-bottom: 18px;
+}
+
+.main .wrapper .search_box .ttl {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+.main .wrapper .search_box input[type="search"] {
+  font-size: 14px;
+  padding: 8px;
+  width: 525px;
+  border-radius: 6px;
+  border: 1px solid rgb(225, 228, 232);
+}
+
+.main .wrapper .search_box .btn_area {
+  display: flex;
+  justify-content: space-between;
+}
+
+.main .wrapper .search_box .btn_area .btn {
+  width: 100px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 6px;
+}
+
+.main .wrapper .search_box .btn_area .btn.left {
+  background-color: rgb(66, 195, 96);
+  border-bottom: 2px solid rgb(40, 167, 69);
+  margin-right: 8px;
+}
+.main .wrapper .search_box .btn_area .btn.right {
+  background-color: rgb(215, 58, 73);
+  border-bottom: 2px solid rgb(175, 28, 42);
+}
+
+.main .wrapper .search_box .btn_area .btn a {
+  text-decoration: none;
+  color: #fff;
+  display: block;
+  padding: 6px 0;
+  cursor: pointer;
+}
+
+.main .wrapper .contents {
+  
+}
+
+.main .wrapper .contents .table {
+  width: 815px;
+  border: 1px solid rgb(225, 228, 232);
+  margin: 0 auto;
+  border-radius: 6px;
+}
+
+.main .wrapper .contents .table tr:not(:last-child) {
+  border-bottom: 1px solid rgb(225, 228, 232);
+}
+
+.main .wrapper .contents .table th {
+  font-size: 14px;
+  font-weight: bold;
+  padding: 8px;
+}
+
+.main .wrapper .contents .table input[type="checkbox"] {
+  width: 20px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.main .wrapper .contents .table .empty {
+  width: 189px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.main .wrapper .contents .table .status {
+  width: 124px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.main .wrapper .contents .table .author {
+  width: 124px;
 }
 
-.App-link {
-  color: #61dafb;
+.main .wrapper .contents .table .date {
+  width: 124px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.main .wrapper .contents .table .update {
+  width: 124px;
+}
+
+.main .wrapper .contents .table td {
+  font-size: 14px;
+  padding: 8px;
 }
